[package]
name = "plex_pinger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.28.2", features = ["full"]}
serde = {version="1.0.163", features = ["derive"]}
serenity = "0.11.6"
serde_json = "1.0.96"
reqwest = "0.11.18"
dns-lookup = "2.0.2"
roxmltree = "0.18.0"